--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -7,3 +7,12 @@ body {
 .container {
     margin-top: 20px;
 }
+
+.titulo{
+    font-family: 'Poppins', sans-serif;  
+    font-size: 65.34px;                  
+    font-weight: 700;                    
+    line-height: 82px;                   
+    text-align: center;                  
+    text-decoration-skip-ink: none;      
+}
