--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -75,7 +75,94 @@ body {
   }
 }
  
+.d-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  .me-3 {
+    margin-right: 15px;
+  }
+
+  .planta {
+    width: 100%;
+    height: auto;
+  }
+
+  .subtitulo {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    font-size: 24px;
+  }
+
+  .text-with-icon {
+    display: flex;
+    gap: 30px;
+
+    .text-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+
+      .icon {
+        width: 52px;
+        height: 52px;
+        margin-right: 15px;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    text-align: center;
+
+    .me-3 {
+      margin-bottom: 20px;
+    }
+
+    .planta {
+      width: 100%;
+      height: auto;
+    }
+
+    .text-with-icon {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .text-item {
+      margin-bottom: 15px;
+    }
+
+    .text-item .icon {
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
+
+    .subtitulo {
+      font-size: 18px;
+    }
+
+    p {
+      margin-left: 0;
+      margin-right: 0;
+      font-size: 16px;
+    }
+
+    .mx-4 {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+}
+
+.yoga-img {
+  max-width: 100%;
+  height: auto;    
+  object-fit: contain;  
+  max-height: 100%;  
+}
 
 .footer {
   background-color: #1a4e57; 
